Use XGB Algorithm

--- a/EDGE_classWork(5_8_2023).ipynb
+++ b/EDGE_classWork(5_8_2023).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9uEwhQWYugap3mPj4Aafv",
+      "authorship_tag": "ABX9TyOZ3ensA3RDlP9vk5Od2oma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1773,10 +1773,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Used XGB Algorithm"
+      ],
+      "metadata": {
+        "id": "lcS3vjV8Z1k7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "XGB = XGBClassifier()\n",
+        "XGB.fit(x_train, y_train.ravel())\n",
+        "predictions2 = XGB.predict(x_test)\n",
+        "\n",
+        "print(accuracy_score(y_test, predictions2))"
+      ],
+      "metadata": {
+        "id": "icydpKA66FnD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "17c43be2-5402-4c4d-c19f-f1fa2cbea71e"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9122807017543859\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "icydpKA66FnD"
+        "id": "8IV84EQhaPg7"
       },
       "execution_count": null,
       "outputs": []
