Used KNN Algorithm

--- a/EDGE_classWork(5_8_2023).ipynb
+++ b/EDGE_classWork(5_8_2023).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ3ensA3RDlP9vk5Od2oma",
+      "authorship_tag": "ABX9TyP3nQvmotTtUMR5HexMH6Qz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1809,10 +1809,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Used KNN Algorithm"
+      ],
+      "metadata": {
+        "id": "dhl1tb6maha6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "KNN = KNeighborsClassifier()\n",
+        "KNN.fit(x_train, y_train.ravel())\n",
+        "predictions3 = KNN.predict(x_test)\n",
+        "\n",
+        "print(accuracy_score(y_test, predictions3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8IV84EQhaPg7",
+        "outputId": "5b0d03bf-fe7d-4489-cca6-60e81779cca2"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.8859649122807017\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8IV84EQhaPg7"
+        "id": "c5hg5zsHaeMc"
       },
       "execution_count": null,
       "outputs": []
