Used SVM Algorithm

--- a/EDGE_classWork(5_8_2023).ipynb
+++ b/EDGE_classWork(5_8_2023).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3nQvmotTtUMR5HexMH6Qz",
+      "authorship_tag": "ABX9TyMWJOL/IqDdz32IndLn/B0t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1845,10 +1845,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Used SVM"
+      ],
+      "metadata": {
+        "id": "D-WwgfQxbd9y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SVM = SVC(kernel='linear')\n",
+        "SVM.fit(x_train, y_train.ravel())\n",
+        "predictions4 = SVM.predict(x_test)\n",
+        "\n",
+        "print(accuracy_score(y_test, predictions4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c5hg5zsHaeMc",
+        "outputId": "965dda01-efcb-4431-89b3-e3fa87e978a5"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9298245614035088\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "c5hg5zsHaeMc"
+        "id": "lCkvC_oZb4JD"
       },
       "execution_count": null,
       "outputs": []
