Replace similar to unique values & unique value to gender

--- a/EDGE_classwork_17_7_2023.ipynb
+++ b/EDGE_classwork_17_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb/dnAuMEvxxw8OciOCnNg",
+      "authorship_tag": "ABX9TyNSGGCgdYyR5CgVD/hiWdkN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -982,9 +982,111 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "df['CLASS'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IX4_oHK1Lljc",
+        "outputId": "5d8987bd-bda1-4b97-8f01-a9dac507e7ee"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Y     844\n",
+              "N     102\n",
+              "P      53\n",
+              "N       1\n",
+              "Name: CLASS, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#replace simillar values to unique values\n",
+        "df['CLASS'] = df['CLASS'].str.replace(\"N \", \"N\")\n",
+        "df['CLASS'] = df['CLASS'].str.replace(\"Y \", \"Y\")\n",
+        "df['Gender'] = df['Gender'].str.replace(\"f\", \"F\")"
+      ],
+      "metadata": {
+        "id": "J1XBbjJ4MyGs"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#now check the unique value of gender\n",
+        "df['Gender'].unique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TV1pWhPhNYE8",
+        "outputId": "bc86100e-18ac-46b6-a318-a6a924655886"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['F', 'M'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#now check the unique value of gender\n",
+        "df['CLASS'].unique()\n",
+        "df['CLASS'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rU8ErUbdNgjj",
+        "outputId": "5a311534-fdc8-49e5-8185-199d4cc8785d"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Y    844\n",
+              "N    103\n",
+              "P     53\n",
+              "Name: CLASS, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IX4_oHK1Lljc"
+        "id": "GlKrWvdLNyZT"
       },
       "execution_count": null,
       "outputs": []
