--- a/EDGE_classwork_17_7_2023.ipynb
+++ b/EDGE_classwork_17_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOt6InZRoP+zdvkSeVwBSLz",
+      "authorship_tag": "ABX9TyNAA0dx7ukHltwmG5KgdY5s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1175,16 +1175,383 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "##Label Encoder"
+      ],
       "metadata": {
         "id": "GRNh1BSUPFZj"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df.CLASS = le.fit_transform(df.CLASS.values)\n",
+        "df.Gender = le.fit_transform(df.Gender.values)"
+      ],
       "metadata": {
         "id": "r7qtloghO8D0"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VLeAD8JuP64s",
+        "outputId": "7534d6f6-df82-4854-b25f-0bbab94983e4"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1000 entries, 0 to 999\n",
+            "Data columns (total 14 columns):\n",
+            " #   Column     Non-Null Count  Dtype  \n",
+            "---  ------     --------------  -----  \n",
+            " 0   ID         1000 non-null   int64  \n",
+            " 1   No_Pation  1000 non-null   int64  \n",
+            " 2   Gender     1000 non-null   int64  \n",
+            " 3   AGE        1000 non-null   int64  \n",
+            " 4   Urea       1000 non-null   float64\n",
+            " 5   Cr         1000 non-null   int64  \n",
+            " 6   HbA1c      1000 non-null   float64\n",
+            " 7   Chol       1000 non-null   float64\n",
+            " 8   TG         1000 non-null   float64\n",
+            " 9   HDL        1000 non-null   float64\n",
+            " 10  LDL        1000 non-null   float64\n",
+            " 11  VLDL       1000 non-null   float64\n",
+            " 12  BMI        1000 non-null   float64\n",
+            " 13  CLASS      1000 non-null   int64  \n",
+            "dtypes: float64(8), int64(6)\n",
+            "memory usage: 109.5 KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "QIIEVp6zQIfb",
+        "outputId": "8ca4c6d6-7e9a-413a-8ef4-e0a22ace2911"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "    ID  No_Pation  Gender  AGE  Urea  Cr  HbA1c  Chol   TG  HDL  LDL  VLDL  \\\n",
+              "0  502      17975       0   50   4.7  46    4.9   4.2  0.9  2.4  1.4   0.5   \n",
+              "1  735      34221       1   26   4.5  62    4.9   3.7  1.4  1.1  2.1   0.6   \n",
+              "2  420      47975       0   50   4.7  46    4.9   4.2  0.9  2.4  1.4   0.5   \n",
+              "3  680      87656       0   50   4.7  46    4.9   4.2  0.9  2.4  1.4   0.5   \n",
+              "4  504      34223       1   33   7.1  46    4.9   4.9  1.0  0.8  2.0   0.4   \n",
+              "\n",
+              "    BMI  CLASS  \n",
+              "0  24.0      0  \n",
+              "1  23.0      0  \n",
+              "2  24.0      0  \n",
+              "3  24.0      0  \n",
+              "4  21.0      0  "
+            ],
+            "text/html": [
+              "\n",
+              "\n",
+              "  <div id=\"df-64b8de42-53fa-4ff6-a0f0-9489851a491c\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>No_Pation</th>\n",
+              "      <th>Gender</th>\n",
+              "      <th>AGE</th>\n",
+              "      <th>Urea</th>\n",
+              "      <th>Cr</th>\n",
+              "      <th>HbA1c</th>\n",
+              "      <th>Chol</th>\n",
+              "      <th>TG</th>\n",
+              "      <th>HDL</th>\n",
+              "      <th>LDL</th>\n",
+              "      <th>VLDL</th>\n",
+              "      <th>BMI</th>\n",
+              "      <th>CLASS</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>502</td>\n",
+              "      <td>17975</td>\n",
+              "      <td>0</td>\n",
+              "      <td>50</td>\n",
+              "      <td>4.7</td>\n",
+              "      <td>46</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>0.9</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.5</td>\n",
+              "      <td>24.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>735</td>\n",
+              "      <td>34221</td>\n",
+              "      <td>1</td>\n",
+              "      <td>26</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>62</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>3.7</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>1.1</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>0.6</td>\n",
+              "      <td>23.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>420</td>\n",
+              "      <td>47975</td>\n",
+              "      <td>0</td>\n",
+              "      <td>50</td>\n",
+              "      <td>4.7</td>\n",
+              "      <td>46</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>0.9</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.5</td>\n",
+              "      <td>24.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>680</td>\n",
+              "      <td>87656</td>\n",
+              "      <td>0</td>\n",
+              "      <td>50</td>\n",
+              "      <td>4.7</td>\n",
+              "      <td>46</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>0.9</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.5</td>\n",
+              "      <td>24.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>504</td>\n",
+              "      <td>34223</td>\n",
+              "      <td>1</td>\n",
+              "      <td>33</td>\n",
+              "      <td>7.1</td>\n",
+              "      <td>46</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.8</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.4</td>\n",
+              "      <td>21.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-64b8de42-53fa-4ff6-a0f0-9489851a491c')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "\n",
+              "\n",
+              "\n",
+              "    <div id=\"df-712a8fb8-19b0-4726-bd28-db17f81593ec\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-712a8fb8-19b0-4726-bd28-db17f81593ec')\"\n",
+              "              title=\"Suggest charts.\"\n",
+              "              style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "      </button>\n",
+              "    </div>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: #E8F0FE;\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: #1967D2;\n",
+              "    height: 32px;\n",
+              "    padding: 0 0 0 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: #E2EBFA;\n",
+              "    box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: #174EA6;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "    background-color: #3B4455;\n",
+              "    fill: #D2E3FC;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart:hover {\n",
+              "    background-color: #434B5C;\n",
+              "    box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "    fill: #FFFFFF;\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "    <script>\n",
+              "      async function quickchart(key) {\n",
+              "        const containerElement = document.querySelector('#' + key);\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      }\n",
+              "    </script>\n",
+              "\n",
+              "      <script>\n",
+              "\n",
+              "function displayQuickchartButton(domScope) {\n",
+              "  let quickchartButtonEl =\n",
+              "    domScope.querySelector('#df-712a8fb8-19b0-4726-bd28-db17f81593ec button.colab-df-quickchart');\n",
+              "  quickchartButtonEl.style.display =\n",
+              "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "}\n",
+              "\n",
+              "        displayQuickchartButton(document);\n",
+              "      </script>\n",
+              "      <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-64b8de42-53fa-4ff6-a0f0-9489851a491c button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-64b8de42-53fa-4ff6-a0f0-9489851a491c');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "E8S6QcbZQMgs"
       },
       "execution_count": null,
       "outputs": []
