Remove Duplicata data

--- a/EDGE_classwork_17_7_2023.ipynb
+++ b/EDGE_classwork_17_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAA0dx7ukHltwmG5KgdY5s",
+      "authorship_tag": "ABX9TyPHvxvdmH85ddKnYgqRdouo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1549,9 +1549,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#reomoving duplicated data poit\n",
+        "print(f\"There are {df.duplicated().sum()} duplicates data\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E8S6QcbZQMgs",
+        "outputId": "3444a297-792c-473b-9372-5a948b2bc248"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 0 duplicates data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "E8S6QcbZQMgs"
+        "id": "sOuh5wIDRmvr"
       },
       "execution_count": null,
       "outputs": []
