Training test split

--- a/EDGE_classwork_17_7_2023.ipynb
+++ b/EDGE_classwork_17_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHvxvdmH85ddKnYgqRdouo",
+      "authorship_tag": "ABX9TyNRAVu3j7W7Uz+rWk8zB3Vb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1558,9 +1558,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E8S6QcbZQMgs",
-        "outputId": "3444a297-792c-473b-9372-5a948b2bc248"
+        "outputId": "69e66d32-ecd0-43bc-bc89-00aa6cbe0ecb"
       },
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,9 +1573,126 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#finding is null value aviable"
+      ],
       "metadata": {
         "id": "sOuh5wIDRmvr"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H1kawvGST1Fz",
+        "outputId": "370eadc6-4f64-4a93-95cc-cd481337bc12"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ID           0\n",
+              "No_Pation    0\n",
+              "Gender       0\n",
+              "AGE          0\n",
+              "Urea         0\n",
+              "Cr           0\n",
+              "HbA1c        0\n",
+              "Chol         0\n",
+              "TG           0\n",
+              "HDL          0\n",
+              "LDL          0\n",
+              "VLDL         0\n",
+              "BMI          0\n",
+              "CLASS        0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#creating a test set\n",
+        "X = df.drop('CLASS', axis=1)\n",
+        "Y = df['CLASS']"
+      ],
+      "metadata": {
+        "id": "tR1x1i_VT33y"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Y.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DQA-qKvRUqns",
+        "outputId": "b7a23c39-c467-4854-f70e-80db03262c84"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#splitting the dataset into the training set and test set\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size = 0.2, random_state = 0, stratify = Y)"
+      ],
+      "metadata": {
+        "id": "qGtoiIFPUtgb"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#logistic regression object\n",
+        "lr = LogisticRegression()\n",
+        "#train the model on train set\n",
+        "lr.fit(X_train, Y_train)\n",
+        "predictions = lr.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "OTYK-ki2VKE0"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "c9NNWmcbVj0z"
       },
       "execution_count": null,
       "outputs": []
