Checking Target variable

--- a/EDGE_classwork_19_7_2023.ipynb
+++ b/EDGE_classwork_19_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdSZHd4kLY04zqiBNhmZh6",
+      "authorship_tag": "ABX9TyMyD09vweylHiRGr9W+WMmI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2023,9 +2023,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#checking the distribution of target variable\n",
+        "heart_data['target'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZjEI7UvNDke7",
+        "outputId": "0c2c79f0-027c-4825-ae26-5ebedbdc268e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1    164\n",
+              "0    138\n",
+              "Name: target, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZjEI7UvNDke7"
+        "id": "7B2lfsD8Euqt"
       },
       "execution_count": null,
       "outputs": []
