--- a/EDGE_classwork_19_7_2023.ipynb
+++ b/EDGE_classwork_19_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmFifJaE+i0y0kDbtlS3NV",
+      "authorship_tag": "ABX9TyOalpzle1ToXsBLKQmL3DQG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2407,6 +2407,58 @@
       "source": [],
       "metadata": {
         "id": "sLlmXk6cGgV1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Splitting the data into training data & test data"
+      ],
+      "metadata": {
+        "id": "az8gT_OvGsV8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state=0)"
+      ],
+      "metadata": {
+        "id": "aZQk1W6CGzbs"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x.shape, x_train.shape, x_test.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X1aOe2D5HAi1",
+        "outputId": "1981b3e9-58c3-4571-ee32-90ddc6f2fec1"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(302, 13) (241, 13) (61, 13)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TqNPvVzXHGqt"
       },
       "execution_count": null,
       "outputs": []
