Model train_Random forest

--- a/EDGE_classwork_19_7_2023.ipynb
+++ b/EDGE_classwork_19_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOalpzle1ToXsBLKQmL3DQG",
+      "authorship_tag": "ABX9TyPmZbZ0bUR8HJuEbALbkxnz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2455,10 +2455,67 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Model training"
+      ],
+      "metadata": {
+        "id": "-YfkWUEWHTSs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Random forest\n",
+        "rf1 = RandomForestClassifier()\n",
+        "rf1.fit(x_train, y_train.ravel())\n",
+        "predictions = rf1.predict(x_test)\n",
+        "\n",
+        "print(classification_report(y_test, predictions))\n",
+        "#import result of mse\n",
+        "print(\"mse=\", metrics.mean_squared_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"msle=\", metrics.mean_squared_log_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TqNPvVzXHGqt",
+        "outputId": "0d0eeabe-3711-46ec-85eb-5221ba7d995d"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.83      0.89      0.86        27\n",
+            "           1       0.91      0.85      0.88        34\n",
+            "\n",
+            "    accuracy                           0.87        61\n",
+            "   macro avg       0.87      0.87      0.87        61\n",
+            "weighted avg       0.87      0.87      0.87        61\n",
+            "\n",
+            "mse= 0.13114754098360656\n",
+            "msle= 0.0630102313335346\n",
+            "mae= 0.13114754098360656\n",
+            "rmse= 0.3621429841700741\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "TqNPvVzXHGqt"
+        "id": "JNoB0AX4Iqci"
       },
       "execution_count": null,
       "outputs": []
