--- a/EDGE_classwork_19_7_2023.ipynb
+++ b/EDGE_classwork_19_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmZbZ0bUR8HJuEbALbkxnz",
+      "authorship_tag": "ABX9TyOJQgLDxDRVDbYxvuvDykt5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2513,12 +2513,202 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Decison Tree\n",
+        "DT1 = DecisionTreeClassifier()\n",
+        "DT1.fit(x_train, y_train.ravel())\n",
+        "predictions1 = DT1.predict(x_test)\n",
+        "\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions1))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions1))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions1)))\n"
+      ],
       "metadata": {
-        "id": "JNoB0AX4Iqci"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JNoB0AX4Iqci",
+        "outputId": "0dae84b8-dc90-4a34-e943-56188a326a94"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.73      0.81      0.77        27\n",
+            "           1       0.84      0.76      0.80        34\n",
+            "\n",
+            "    accuracy                           0.79        61\n",
+            "   macro avg       0.79      0.79      0.79        61\n",
+            "weighted avg       0.79      0.79      0.79        61\n",
+            "\n",
+            "mse= 0.21311475409836064\n",
+            "msle= 0.10239162591699373\n",
+            "mae= 0.21311475409836064\n",
+            "rmse= 0.4616435357484827\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# XGB classifier machine object\n",
+        "XGB1 = XGBClassifier()\n",
+        "# train the model on train set\n",
+        "XGB1.fit(x_train, y_train.ravel())\n",
+        "predictions2 = XGB1.predict(x_test)\n",
+        "\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions2))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions2))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions2)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mYhkZYAjJY31",
+        "outputId": "390b7fe6-2099-4af4-ea36-fa734b98d1f9"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.76      0.81      0.79        27\n",
+            "           1       0.84      0.79      0.82        34\n",
+            "\n",
+            "    accuracy                           0.80        61\n",
+            "   macro avg       0.80      0.80      0.80        61\n",
+            "weighted avg       0.81      0.80      0.80        61\n",
+            "\n",
+            "mse= 0.19672131147540983\n",
+            "msle= 0.09451534700030191\n",
+            "mae= 0.19672131147540983\n",
+            "rmse= 0.4435327625727437\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# KNN classifier machine object\n",
+        "KNN1 =  KNeighborsClassifier()\n",
+        "# train the model on train set\n",
+        "KNN1.fit(x_train, y_train.ravel())\n",
+        "predictions3 = KNN1.predict(x_test)\n",
+        "\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions3))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions3))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions3)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2X330J84JhqY",
+        "outputId": "a3dbd3b6-82fa-4fc4-c179-950966e1a0f4"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.55      0.44      0.49        27\n",
+            "           1       0.62      0.71      0.66        34\n",
+            "\n",
+            "    accuracy                           0.59        61\n",
+            "   macro avg       0.58      0.58      0.57        61\n",
+            "weighted avg       0.58      0.59      0.58        61\n",
+            "\n",
+            "mse= 0.4098360655737705\n",
+            "msle= 0.1969069729172956\n",
+            "mae= 0.4098360655737705\n",
+            "rmse= 0.6401843996644799\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# support vector machine object\n",
+        "svm1 = SVC(kernel='linear')\n",
+        "# train the model on train set\n",
+        "svm1.fit(x_train, y_train.ravel())\n",
+        "predictions4 = svm1.predict(x_test)\n",
+        "\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions4))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions4))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions4)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "id-d226KJlSf",
+        "outputId": "9a21fa2f-6041-417a-e776-b1fb61b30170"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.88      0.81      0.85        27\n",
+            "           1       0.86      0.91      0.89        34\n",
+            "\n",
+            "    accuracy                           0.87        61\n",
+            "   macro avg       0.87      0.86      0.87        61\n",
+            "weighted avg       0.87      0.87      0.87        61\n",
+            "\n",
+            "mse= 0.13114754098360656\n",
+            "msle= 0.0630102313335346\n",
+            "mae= 0.13114754098360656\n",
+            "rmse= 0.3621429841700741\n"
+          ]
+        }
+      ]
     }
   ]
 }
