Used SMOTE module

--- a/EDGE_classwork_19_7_2023.ipynb
+++ b/EDGE_classwork_19_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJQgLDxDRVDbYxvuvDykt5",
+      "authorship_tag": "ABX9TyMHrYgGF40twXsL9c/KmUZZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2635,9 +2635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2X330J84JhqY",
-        "outputId": "a3dbd3b6-82fa-4fc4-c179-950966e1a0f4"
+        "outputId": "c094aeb0-c687-4663-bc0a-a9f99e24e710"
       },
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -2709,6 +2709,118 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install imblearn"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dudo4f65KIW3",
+        "outputId": "9308fd27-c6ad-4038-cf97-df0a12c1db07"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting imblearn\n",
+            "  Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
+            "Requirement already satisfied: imbalanced-learn in /usr/local/lib/python3.10/dist-packages (from imblearn) (0.10.1)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.22.4)\n",
+            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.10.1)\n",
+            "Requirement already satisfied: scikit-learn>=1.0.2 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.2.2)\n",
+            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (1.3.1)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn->imblearn) (3.2.0)\n",
+            "Installing collected packages: imblearn\n",
+            "Successfully installed imblearn-0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import SMOTE module from imblearn library"
+      ],
+      "metadata": {
+        "id": "atvnTexpKLwM"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from imblearn.over_sampling import SMOTE\n",
+        "sm_over = SMOTE(random_state=2)"
+      ],
+      "metadata": {
+        "id": "6OQ2hQwPcsGb"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train_res, y_train_res = sm_over.fit_resample(x_train, y_train.ravel())"
+      ],
+      "metadata": {
+        "id": "IatP9Wipc2Lk"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('After OverSampling, the shape of train_X: {}'.format(x_train_res.shape))\n",
+        "print('After OverSampling, the shape of train_y: {} \\n'.format(y_train_res.shape))\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"Before OverSampling, counts of label '1': {}\".format(sum(y_train == 1)))\n",
+        "print(\"Before OverSampling, counts of label '0': {}\".format(sum(y_train== 0)))\n",
+        "print(\"After OverSampling, counts of label '1': {}\".format(sum(y_train_res == 1)))\n",
+        "print(\"After OverSampling, counts of label '0': {}\".format(sum(y_train_res == 0)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3bRY8Mo1dAYM",
+        "outputId": "fe5e511c-7a53-40d6-e7cb-97f360771173"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "After OverSampling, the shape of train_X: (260, 13)\n",
+            "After OverSampling, the shape of train_y: (260,) \n",
+            "\n",
+            "Before OverSampling, counts of label '1': 130\n",
+            "Before OverSampling, counts of label '0': 111\n",
+            "After OverSampling, counts of label '1': 130\n",
+            "After OverSampling, counts of label '0': 130\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qcODIVmodDP7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
